fixed margins on mobile

--- a/src/styles/me.css
+++ b/src/styles/me.css
@@ -66,7 +66,8 @@ h1 {
   }
 }
 h2 {
-  &, & a {
+  &,
+  & a {
     color: #00bcbc;
   }
   @nest .alt & {
@@ -148,7 +149,6 @@ h2 {
     display: none;
   }
 }
-
 
 /* Fixed print pagination */
 
