--- a/src/styles/partials/ghost.css
+++ b/src/styles/partials/ghost.css
@@ -21,11 +21,10 @@
 }
 
 .life {
-  float: left;
-  margin: 10px;
-  position: relative;
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
   text-transform: uppercase;
-  width: 190px;
   @media screen and (max-width: 650px) {
     display: none;
   }
@@ -33,8 +32,9 @@
 .life__label {
   opacity: 0;
   position: absolute;
-  top: 15px;
+  top: 0;
   transition: opacity 2s ease;
+  white-space: nowrap;
 }
 .life--over .life__label {
   opacity: 1;
@@ -44,7 +44,7 @@
   background: url(../images/heart.png);
   display: inline-block;
   height: 45px;
-  margin: 0 5px;
+  margin-right: 0.5rem;
   opacity: 1;
   transition: opacity 0.5s ease;
   width: 50px;
