--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,10 @@
 @import 'partials/links';
 @import 'partials/me';
 
+* {
+  box-sizing: border-box;
+}
+
 a {
   text-decoration: none;
 }
@@ -12,29 +16,35 @@ html {
   background-color: #c0deed;
   background-image: radial-gradient(circle, #6bd3e4, #2eaed5);
   font-family: 'Press Start 2P', monospace;
+  font-size: 16px;
+}
+
+html,
+body {
+  height: 100%;
 }
 
 header,
 footer {
-  height: 10vh;
+  display: flex;
+  height: 10%;
+  padding: 1rem;
+  text-transform: uppercase;
 }
 
-.my__projects,
-.my__resume,
-.my__special {
-  position: absolute;
-  bottom: 20px;
-}
-.my__projects {
-  left: 20px;
-}
-.my__resume {
-  right: 20px;
-}
-.my__special {
-  left: 50%;
-  transform: translateX(-50%);
-  @media (max-width: 550px) {
-    display: none;
+header {
+  justify-content: center;
+  @media (min-width: 650px) {
+    justify-content: flex-end;
   }
+}
+
+footer {
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+article {
+  height: 80%;
+  width: 100%;
 }
